--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/sergiuPanainte/school-portal#readme",
   "devDependencies": {
+    "browser-sync": "^2.27.5",
     "nodemon": "^2.0.13"
   },
   "dependencies": {
