--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "start-watch": "nodemon src"
+    "start-watch": "nodemon src",
+    "ui": "browser-sync start --config bs-config.js"
   },
   "repository": {
     "type": "git",
